media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
    component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: http
      port: 80
      protocol: TCP
  selector:
    app: sonarr
