media/sonarr/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  labels:
    app: sonarr
    component: frontend
  name: sonarr
  namespace: media
spec:
  rules:
  - host: sonarr.n10.io
    http:
      paths:
      - backend:
          serviceName: sonarr
          servicePort: 80
        path: /

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: sonarr
    component: oauth2-proxy
  name: sonarr-oauth2-proxy
  namespace: media
spec:
  rules:
  - host: sonarr.n10.io
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 80
        path: /oauth2
  tls:
  - hosts:
    - sonarr.n10.io
    secretName: sonarr-tls
