media/sonarr/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarr
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: sonarr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: nginx-ingress-prod
    ports:
    - protocol: TCP
      port: 8989
